--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <h1>Whack-a-mole! <span class="score">0</span></h1>
-    <button onClick="startGame()">Start!</button>
+
+    <div class="startHolder"><button class="btn" onClick="startGame()">Start!</button></div>
 
     <div class="game">
       <div class="hole hole1">
