--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <body>
     <h1>Whack-a-mole! <span class="score">0</span></h1>
 
-    <div class="startHolder"><button class="btn" onClick="startGame()">Start!</button></div>
+    <!-- <div class="startHolder">
+      <button class="btn" onClick="startGame()">Start!</button>
+    </div> -->
 
     <div class="game">
       <div class="hole hole1">
-        <div class="mole"></div>
+        <div class="mole"><img src="./assets/mole.svg" alt="" /></div>
       </div>
       <div class="hole hole2">
         <div class="mole"></div>
