--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <button class="btn" onClick="StartGame()">Start!</button>
     </div>
 
+    <div class="timer">Game Over in : 10 seconds</div>
+
     <div class="game">
       <div class="hole hole1">
         <div class="mole"></div>
@@ -34,6 +36,9 @@
       </div>
     </div>
 
+    <div class="tryAgain">
+      <button class="try" onClick="StartGame()">Try Again!</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
